Support Pulso trim metadata and thumbnails